# RustyCommits

./: .gitignore  Cargo.toml  Makefile  README.md
src/: cli.rs  config.rs  interactive.rs  lib.rs  main.rs
src/api/: openrouter.rs
src/errors/: mod.rs
src/utils/: env_variable.rs  git.rs  mod.rs  prompt.rs
