[package]
name = "rusty-commit"
version = "0.1.0"
edition = "2021"

[dependencies]
git2 = "0.18"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
colored = "2.0"
thiserror = "1.0"
dialoguer = "0.11"
indicatif = "0.17"
dotenv = "0.15"
toml = "0.8"
dirs = "5.0"
regex = "1"
walkdir = "2"
which = "6.0"
tokio-util = { version = "0.7", features = ["full"] }

[[bin]]
name = "rusty-commit"
path = "src/main.rs"

